--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
 # VITE_SPOONKEY=a354247cef3940dc8dc0b8875f651b91
 # VITE_SPOONKEY=b07c1b22326541999f3a04f0ed503144
-VITE_SPOONKEY=5a94d518e0694f54a6d874dcf3fa5134
+# VITE_SPOONKEY=5a94d518e0694f54a6d874dcf3fa5134
+VITE_SPOONKEY=4f93dcc6155e43059733943b8af767a5
 SPOONKEY=a354247cef3940dc8dc0b8875f651b91
